[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molbert"
dynamic = ["version"]
description = "Language modelling on chem/bio sequences"
readme = "README.md"
authors = [{ name = "BenevolentAI", email = "chemval@benevolent.ai" }]
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pytorch-lightning>=2.5.5",
    "pyyaml>=6.0",
    "rdkit>=2025.9.1",
    "scikit-learn>=1.5",
    "scipy>=1.12",
    "torch>=2.9",
    "transformers>=4.49",
    "tqdm>=4.66",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.1",
    "mypy>=1.10",
    "pytest>=8.3",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/BenevolentAI/MolBERT"

[tool.setuptools]
include-package-data = true
zip-safe = true

[tool.setuptools.packages.find]
include = ["molbert*"]

[tool.setuptools.dynamic]
version = { attr = "molbert.__version__" }
